Minor updates to doc/notebooks/Molecular_Grid.ipynb

--- a/doc/notebooks/Molecular_Grid.ipynb
+++ b/doc/notebooks/Molecular_Grid.ipynb
@@ -11,7 +11,7 @@
         "This example on Formaldehyde illustates all the features of using molecular grids.\n",
         "\n",
         "The format checkpoint file wavefunction is included in \"doc/notebooks/ch2o_q+0.fchk\" and is\n",
-        "read using the [IOData](https://github.com/theochem/iodata) package."
+        "read using the [IOData](https://github.com/theochem/iodata) package.\n"
       ]
     },
     {
@@ -34,6 +34,7 @@
             " [ 1.01154892e-02  1.09802629e-07 -6.99333116e-07]\n",
             " [-1.09577141e+00  1.77311416e+00  1.42544321e-07]\n",
             " [-1.09577166e+00 -1.77311468e+00  2.44755133e-07]]\n",
+            "\n",
             "Atomic numbers of the atom \n",
             " [8 6 1 1]\n"
           ]
@@ -45,7 +46,7 @@
         "\n",
         "mol = load_one(\"ch2o_q+0.fchk\")\n",
         "\n",
-        "print(f\"Coordinates of the atoms \\n {mol.atcoords}\")\n",
+        "print(f\"Coordinates of the atoms \\n {mol.atcoords}\\n\")\n",
         "print(f\"Atomic numbers of the atom \\n {mol.atnums}\")"
       ]
     },
@@ -55,7 +56,7 @@
         "collapsed": false
       },
       "source": [
-        "The first step to constructing a molecular grid is to define a radial grid to integrate over the radial coordinate.  This is done by first defining a GaussLegendre grid over $[-1, 1]$ and transforming it to $[0, \\infty)$ using a Becke Transformation."
+        "The first step to constructing a molecular grid is to define a radial grid to integrate over the radial coordinate. This is done by first defining a GaussLegendre grid over $[-1, 1]$ and transforming it to $[0, \\infty)$ using a Becke Transformation.\n"
       ]
     },
     {
@@ -83,6 +84,7 @@
             "  0.65589647  0.70155247  0.7444943   0.78455583  0.82158207  0.85542977\n",
             "  0.88596798  0.91307856  0.93665662  0.95661096  0.97286439  0.98535408\n",
             "  0.99403197  0.9988664 ]\n",
+            "\n",
             "Transformed points \n",
             " [8.50678848e-04 4.48941942e-03 1.10654689e-02 2.06316373e-02\n",
             " 3.32634175e-02 4.90613930e-02 6.81530638e-02 9.06950874e-02\n",
@@ -105,8 +107,9 @@
         "from grid.rtransform import BeckeRTransform\n",
         "\n",
         "oned_grid = GaussLegendre(npoints=50)\n",
-        "print(f\"One-dimesional points \\n {oned_grid.points}\")\n",
-        "radial_grid = BeckeRTransform(0.0, R=1.5).transform_1d_grid(oned_grid)  #BeckeRTransform(0.0, R=2.0).transform_1d_grid(oned_grid)\n",
+        "print(f\"One-dimesional points \\n {oned_grid.points}\\n\")\n",
+        "\n",
+        "radial_grid = BeckeRTransform(0.0, R=1.5).transform_1d_grid(oned_grid)\n",
         "print(f\"Transformed points \\n {radial_grid.points}\")"
       ]
     },
@@ -116,7 +119,7 @@
         "collapsed": false
       },
       "source": [
-        "Once a radial grid is defined, there are several methods to constructing a molecular grid. The simplest of such method is used. Here, Becke weights are used as an atom in molecule weights."
+        "Once a radial grid is defined, there are several methods to constructing a molecular grid. The simplest of such method is used. Here, Becke weights are used as an atom in molecule weights.\n"
       ]
     },
     {
@@ -163,12 +166,12 @@
         "\n",
         "##### Example: Electron Density\n",
         "\n",
-        "This example shows how to use molecular grids to integrate the electron density $\\rho(\\textbf{r})$. This should equal to the number of electrons 16 of Formaldehyde. This is calculated using the [gbasis](https://github.com/theochem/gbasis) package"
+        "This example shows how to use molecular grids to integrate the electron density $\\rho(\\textbf{r})$. This should equal to the number of electrons 16 of Formaldehyde. This is calculated using the [gbasis](https://github.com/theochem/gbasis) package\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 24,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2023-05-18T16:48:05.389647782Z",
@@ -181,7 +184,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Integration of the electron density: 15.999987778747279.\n"
+            "Integration of the electron density:  15.999988.\n"
           ]
         }
       ],
@@ -194,36 +197,40 @@
         "\n",
         "# Compute the electron density\n",
         "rdm = mol.one_rdms[\"scf\"]\n",
-        "electron_density = evaluate_density(rdm, basis, mol_grid.points)\n",
+        "dens = evaluate_density(rdm, basis, mol_grid.points)\n",
         "\n",
         "# Integrate using the molecular grid\n",
-        "print(f\"Integration of the electron density: {mol_grid.integrate(electron_density)}.\")"
+        "print(f\"Integration of the electron density: {mol_grid.integrate(dens): .6f}.\")"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Local properties\n",
+        "### Local Properties\n",
         "\n",
-        "##### Example: Atomic charges from molecular electron density\n",
+        "#### Example: Atomic charges from molecular electron density\n",
         "\n",
-        "This example shows how to get extract atomic grids from a molecular grid and integrate the electron density to get atomic charges. "
+        "This example shows how to extract atomic grids from a molecular grid and integrate the electron density to get atomic charges.\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Molecular grid has 16448 points.\n",
-            "Oxygen grid has 4980 points.\n",
-            "Integration of the Oxygen atom electron density on the Oxygen grid: 6.213950819473563.\n",
-            "Atomic charge of the Oxygen atom: -0.21395081947356331.\n"
+            "16448 points in molecular grid\n",
+            "4980 points in atomic grid of atom 1\n",
+            "\n",
+            "Shape of molecular electron density : (16448,)\n",
+            "Shape of atomic density of Oxygen   : (4980,)\n",
+            "\n",
+            "Integration of the Oxygen atom electron density on the Oxygen grid:  6.213951\n",
+            "Atomic charge of the Oxygen atom (q = Z - N): -0.213951\n"
           ]
         }
       ],
@@ -231,21 +238,23 @@
         "# Extract the atomic grid of the Oxygen atom\n",
         "atom_index = 1\n",
         "o_grid = mol_grid.get_atomic_grid(atom_index)\n",
-        "print(f\"Molecular grid has {len(mol_grid.points)} points.\")\n",
-        "print(f\"Oxygen grid has {len(o_grid.points)} points.\")\n",
+        "print(f\"{len(mol_grid.points)} points in molecular grid\")\n",
+        "print(f\"{len(o_grid.points)} points in atomic grid of atom {atom_index}\\n\")\n",
         "\n",
         "# partition electron density into atomic electron densities (each point is assigned to an atom)\n",
-        "# 1. Every point is weighted by the Becke weight of the atom it is assigned to\n",
-        "w_electron_density = electron_density * mol_grid.aim_weights\n",
-        "# 2. Extract electron density values of points assigned to the Oxygen atom\n",
+        "# 1. Compute weighted electron density by Becke integration weights\n",
+        "w_dens = dens * mol_grid.aim_weights\n",
+        "# 2. Get weighted electron density of points assigned to Oxygen atom\n",
         "o_idcs = np.arange(mol_grid.indices[atom_index], mol_grid.indices[atom_index + 1])\n",
-        "o_electron_density = w_electron_density[o_idcs]\n",
+        "o_dens = w_dens[o_idcs]\n",
+        "print(f\"Shape of molecular electron density : {dens.shape}\")\n",
+        "print(f\"Shape of atomic density of Oxygen   : {o_dens.shape}\\n\")\n",
         "\n",
         "# Integrate using the atomic grid\n",
-        "o_charge = o_grid.integrate(o_electron_density)\n",
+        "o_charge = o_grid.integrate(o_dens)\n",
         "\n",
-        "print(f\"Integration of the Oxygen atom electron density on the Oxygen grid: {o_charge}.\")\n",
-        "print(f\"Atomic charge of the Oxygen atom: {mol.atnums[1] - o_charge}.\")"
+        "print(f\"Integration of the Oxygen atom electron density on the Oxygen grid: {o_charge: .6f}\")\n",
+        "print(f\"Atomic charge of the Oxygen atom (q = Z - N): {mol.atnums[1] - o_charge: .6f}\")"
       ]
     },
     {
@@ -256,14 +265,14 @@
       "source": [
         "### Interpolation\n",
         "\n",
-        "##### Example: Electron Density\n",
+        "#### Example: Electron Density\n",
         "\n",
-        "This example shows how to interpolate any function using molecular grids.  The electron density is used again here as the example."
+        "This example shows how to interpolate any function using molecular grids. The electron density is used again here as the example.\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 18,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2023-05-18T16:48:06.926137896Z",
@@ -276,26 +285,26 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Max Error 0.001302904658059434,  Mean Error 3.500902876292755e-05,  Std Dev 0.0001483415813999016\n"
+            "Max Error= 0.001164; Mean Error= 0.000019; Std Dev Error= 0.000117\n"
           ]
         }
       ],
       "source": [
         "# Construct interpolate function\n",
-        "interpolate = mol_grid.interpolate(\n",
-        "    func_vals=electron_density\n",
-        ")\n",
+        "interpolate = mol_grid.interpolate(func_vals=dens)\n",
         "\n",
         "# Construct 100 random-set of points between [-5, 5]^3\n",
         "random_grid = np.random.uniform(-5, 5, size=(100, 3))\n",
         "\n",
-        "# Evalaute using the interpolate\n",
+        "# Evaluate using the interpolate\n",
         "inter_vals = interpolate(random_grid)\n",
         "actual_vals = evaluate_density(rdm, basis, random_grid)\n",
         "\n",
-        "# Look at the error-difference\n",
+        "# Compute the interpolation error\n",
         "err = np.abs(inter_vals - actual_vals)\n",
-        "print(f\"Max Error {np.max(err)},  Mean Error {np.mean(err)},  Std Dev {np.std(err)}\")\n"
+        "print(\n",
+        "    f\"Max Error={np.max(err): .6f}; Mean Error={np.mean(err): .6f}; Std Dev Error={np.std(err): .6f}\"\n",
+        ")"
       ]
     },
     {
@@ -306,17 +315,17 @@
       "source": [
         "### Derivative Interpolation\n",
         "\n",
-        "##### Example: Weizsacker Kinetic Energy Density\n",
+        "#### Example: Weizsacker Kinetic Energy Density\n",
         "\n",
         "The Weizsacker kinetic energy density is defined as:\n",
-        "    $$\\tau_W (\\textbf{r}) = \\frac{1}{8} \\frac{|\\nabla \\rho(\\textbf{r}) |^2}{\\rho(\\textbf{r})}. $$\n",
+        "$$\\tau_W (\\textbf{r}) = \\frac{1}{8} \\frac{|\\nabla \\rho(\\textbf{r}) |^2}{\\rho(\\textbf{r})}. $$\n",
         "\n",
-        "This example will show how to interpolate the Weizsacker kinetic energy density using the interpolation of the electron density $\\rho(\\textbf{r})$."
+        "This example will show how to interpolate the Weizsacker kinetic energy density using the interpolation of the electron density $\\rho(\\textbf{r})$.\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 19,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2023-05-18T16:48:09.998527980Z",
@@ -329,7 +338,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Max Error 0.0015169498269268777,  Mean Error 7.528647116405785e-05,  Std Dev 0.00023846069080800918\n"
+            "Max Error= 0.006990; Mean Error= 0.000097; Std Dev Error= 0.000698\n"
           ]
         }
       ],
@@ -348,8 +357,11 @@
         "deriv_norm = np.linalg.norm(deriv_interp, axis=1) ** 2.0\n",
         "kinetic_interp = (1.0 / 8.0) * deriv_norm / dens_interp\n",
         "\n",
+        "# Compute the interpolation error\n",
         "err = np.abs(kinetic_dens - kinetic_interp)\n",
-        "print(f\"Max Error {np.max(err)},  Mean Error {np.mean(err)},  Std Dev {np.std(err)}\")"
+        "print(\n",
+        "    f\"Max Error={np.max(err): .6f}; Mean Error={np.mean(err): .6f}; Std Dev Error={np.std(err): .6f}\"\n",
+        ")"
       ]
     },
     {
@@ -360,21 +372,21 @@
       "source": [
         "### Solving Poisson Equation\n",
         "\n",
-        "##### Example: Electrostatic Potential\n",
+        "#### Example: Electrostatic Potential\n",
         "\n",
         "The Poisson equation is defined as:\n",
-        "    $$\\nabla^2 V(\\textbf{r}) = - 4\\pi \\rho(\\textbf{r}),$$\n",
+        "$$\\nabla^2 V(\\textbf{r}) = - 4\\pi \\rho(\\textbf{r}),$$\n",
         "\n",
-        "where $\\nabla^2$ is the Laplacian operator, $V$ is the Couloumb potential and $\\rho$ is the electron density.  This example will show how to use molecular grids to solve the Poisson equation for a given electron density.  The solution is equivalent to the integral:\n",
-        "    $$V(\\textbf{r}_1) = \\int \\frac{\\rho(\\textbf{r}_2)}{| \\textbf{r}_1 - \\textbf{r}_2 | } d\\textbf{r}_2.$$\n",
+        "where $\\nabla^2$ is the Laplacian operator, $V$ is the Couloumb potential and $\\rho$ is the electron density. This example will show how to use molecular grids to solve the Poisson equation for a given electron density. The solution is equivalent to the integral:\n",
+        "$$V(\\textbf{r}_1) = \\int \\frac{\\rho(\\textbf{r}_2)}{| \\textbf{r}_1 - \\textbf{r}_2 | } d\\textbf{r}_2.$$\n",
         "\n",
         "This can be used to calculate the electrostatic potential of a molecule with coordinates $\\{R_A\\}$ and charge $\\{Z_A\\}$:\n",
-        "    $$\\Phi(\\textbf{r}_1) = -\\int \\frac{\\rho(\\textbf{r}_2)}{| \\textbf{r}_1 - \\textbf{r}_2 | } d\\textbf{r}_2 + \\sum_{A} \\frac{Z_A}{|\\textbf{r}_1 - R_A|}$$"
+        "$$\\Phi(\\textbf{r}_1) = -\\int \\frac{\\rho(\\textbf{r}_2)}{| \\textbf{r}_1 - \\textbf{r}_2 | } d\\textbf{r}_2 + \\sum_{A} \\frac{Z_A}{|\\textbf{r}_1 - R_A|}$$\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 21,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2023-05-18T16:48:35.841955440Z",
@@ -387,7 +399,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Max Error 0.015115750096519776,  Mean Error 0.0038874435708785506,  Std Dev 0.0032290409703695498\n"
+            "Max Error= 0.024668; Mean Error= 0.003831; Std Dev Error= 0.003601\n"
           ]
         }
       ],
@@ -420,8 +432,11 @@
         ")\n",
         "actual_potential = potential(random_grid)\n",
         "\n",
+        "# Compute the interpolation error\n",
         "err = np.abs(desired_potential - actual_potential)\n",
-        "print(f\"Max Error {np.max(err)},  Mean Error {np.mean(err)},  Std Dev {np.std(err)}\")"
+        "print(\n",
+        "    f\"Max Error={np.max(err): .6f}; Mean Error={np.mean(err): .6f}; Std Dev Error={np.std(err): .6f}\"\n",
+        ")"
       ]
     }
   ],
