Load data from GPAW restart file

--- a/doc/notebooks/Periodic_Grid.ipynb
+++ b/doc/notebooks/Periodic_Grid.ipynb
@@ -6,39 +6,11 @@
       "source": [
         "## Evaluation of a function in a periodic grid\n",
         "\n",
-        "This example illustrates how to evaluate a function in a periodic grid. In this case, the interaction of an atomic nucleus with the electron density of the crystal is evaluated. In this case the electron density of the unit cell is treated as periodic."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "#### Calculating the periodic property\n",
+        "This example illustrates how to evaluate a function in a periodic grid. In this case, the interaction of an atomic nucleus with the electron density of the crystal is evaluated. In this case the electron density of the unit cell is treated as periodic.\n",
         "\n",
-        "In the following preparation step the electron density on grid points distributed across the unit cell is calculated. The calculation is performed using GPAW and the PBE exchange-correlation functional."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 5,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Gpaw is already installed.\n"
-          ]
-        }
-      ],
-      "source": [
-        "import pkg_resources\n",
+        "### Defining the grid describing the unit cell\n",
         "\n",
-        "try:\n",
-        "    pkg_resources.get_distribution('gpaw')\n",
-        "    print('Gpaw is already installed.')\n",
-        "except pkg_resources.DistributionNotFound:\n",
-        "    !pip install gpaw\n"
+        "A uniform grid using Grid is defined with the points for which the electron density was returned by GPAW."
       ]
     },
     {
@@ -50,88 +22,21 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Energy: -26.862402403686712 eV\n"
-          ]
-        }
-      ],
-      "source": [
-        "from ase.io import write\n",
-        "from gpaw import GPAW, PW\n",
-        "from ase import Atoms\n",
-        "import numpy as np\n",
-        "from ase.units import Bohr\n",
-        "\n",
-        "# optional for visualization\n",
-        "# from ase.visualize import view\n",
-        "\n",
-        "\"\"\"NaCl crystal structure\"\"\"\n",
-        "# Define the NaCl cell with experimental data \"Acta Crystallographica (1,1948-23,1967)\"\n",
-        "a = 5.64        # Lattice parameter in Angstrom\n",
-        "\n",
-        "# cell is defined with eight atoms\n",
-        "formula = \"Na4Cl4\"\n",
-        "# atom positions in the cell (same order as formula)\n",
-        "b = a / 2\n",
-        "positions = np.array(\n",
-        "    [\n",
-        "        [0.0, 0.0, 0.0],\n",
-        "        [0.0, b, b],\n",
-        "        [b, 0.0, b],\n",
-        "        [b, b, 0.0],\n",
-        "        [b, b, b],\n",
-        "        [b, 0.0, 0.0],\n",
-        "        [0.0, b, 0.0],\n",
-        "        [0.0, 0.0, b],\n",
-        "    ]\n",
-        ")\n",
-        "\n",
-        "# Define the the system\n",
-        "NaCl = Atoms(symbols=formula, pbc=True, cell=[a, a, a], positions=positions)\n",
-        "\n",
-        "# optional for visualization\n",
-        "# view(nacl_cell)\n",
-        "\n",
-        "# Define the calculator\n",
-        "parameters = {\"xc\": \"PBE\", \"kpts\": (8, 8, 8), \"txt\": \"nacl_pbe0.txt\"}\n",
-        "k = 8  # k-point grid\n",
-        "calculator = GPAW(mode=PW(300), **parameters)  \n",
-        "NaCl.calc = calculator\n",
-        "\n",
-        "energy = NaCl.get_potential_energy()\n",
-        "calculator.write(\"nacl.gpw\")\n",
-        "print(\"Energy:\", energy, \"eV\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### Defining the grid describing the unit cell\n",
-        "\n",
-        "A uniform grid using Grid is defined with the points for which the electron density was returned by GPAW."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 7,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Number of electrons in the cell (from GPAW): 112.00000334289298\n",
-            "Number of electrons in the cell (using Riemannian weights): 112.00000334289294\n",
+            "Number of electrons in the cell (from GPAW): 112.0000033428932\n",
+            "Number of electrons in the cell (using Riemannian weights): 112.0000033428934\n",
             "The GPAW integration corresponds to the standard Rieman Integral\n",
-            "\n",
-            "Grid allows for different weighting schemes:\n",
-            "Number of electrons in the cell (using Trapezoidal rule weights): 99.09043495757786\n"
+            "\n"
           ]
         }
       ],
       "source": [
+        "import numpy as np\n",
         "from grid.cubic import UniformGrid\n",
         "from grid.periodicgrid import PeriodicGrid\n",
+        "from gpaw import restart\n",
+        "from ase.units import Bohr\n",
+        "\n",
+        "NaCl, calculator = restart('nacl.gpw', txt=None)\n",
         "\n",
         "# get atomic coordinates and numbers\n",
         "atnums = NaCl.get_atomic_numbers()              \n",
@@ -156,14 +61,9 @@
         "\n",
         "# create a grid object (UniformGrid) with the standard Riemannian weights\n",
         "grid_st = UniformGrid(origin=np.zeros(3), axes=axes, shape=shape, weight=\"Rectangle\")\n",
-        "# create a grid object (UniformGrid) with the standard Trapezoidal rule weights\n",
-        "grid_trap = UniformGrid(origin=np.zeros(3), axes=axes, shape=shape)\n",
         "\n",
         "print(\"Number of electrons in the cell (using Riemannian weights):\", grid_st.integrate(density_au))\n",
-        "print(\"The GPAW integration corresponds to the standard Rieman Integral\\n\")\n",
-        "\n",
-        "print(\"Grid allows for different weighting schemes:\")\n",
-        "print(\"Number of electrons in the cell (using Trapezoidal rule weights):\", grid_trap.integrate(density_au))"
+        "print(\"The GPAW integration corresponds to the standard Rieman Integral\\n\")"
       ]
     },
     {
@@ -177,7 +77,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
