Fix Poisson example

--- a/doc/notebooks/JCP_Paper.ipynb
+++ b/doc/notebooks/JCP_Paper.ipynb
@@ -521,42 +521,45 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# import numpy as np\n",
-        "# from grid.onedgrid import Simpson\n",
-        "# from grid.poisson import solve_poisson_bvp\n",
-        "# from grid.rtransform import BeckeRTransform, InverseRTransform\n",
-        "# from scipy.special import erf\n",
+        "import numpy as np\n",
+        "from grid.poisson import solve_poisson_bvp\n",
+        "from grid.rtransform import BeckeRTransform, InverseRTransform\n",
+        "from scipy.special import erf\n",
         "\n",
-        "# center = np.array([0, 1, 0])\n",
+        "center = np.array([0, 1, 0])\n",
         "\n",
-        "# def charge_distribution(x, alpha=0.25):\n",
-        "#     r = np.linalg.norm(x - center, axis=1)\n",
-        "#     return (alpha / np.pi) ** (3.0 / 2.0) * np.exp(-alpha * r**2.0)\n",
+        "def charge_distribution(x, alpha=0.25):\n",
+        "    r = np.linalg.norm(x - center, axis=1)\n",
+        "    return (alpha / np.pi) ** (3.0 / 2.0) * np.exp(-alpha * r**2.0)\n",
         "\n",
-        "# def actual_potential(x, alpha=0.25):\n",
-        "#     r_PC = np.linalg.norm(x - center, axis=1)\n",
-        "#     desired = erf(np.sqrt(alpha) * r_PC) / r_PC\n",
-        "#     desired[r_PC == 0.0] = 0.0\n",
-        "#     return desired\n",
+        "def actual_potential(x, alpha=0.25):\n",
+        "    r_PC = np.linalg.norm(x - center, axis=1)\n",
+        "    desired = erf(np.sqrt(alpha) * r_PC) / r_PC\n",
+        "    desired[r_PC == 0.0] = 0.0\n",
+        "    return desired\n",
         "\n",
-        "# btf = BeckeRTransform(rmin=0.0, R=1.5)\n",
+        "# define atomic grid at the center of the potential\n",
+        "btf = BeckeRTransform(1.e-4, 1.5)\n",
+        "atgrid = AtomGrid.from_preset(atnum=1, preset=\"fine\", rgrid=rgrid, center=center)\n",
         "\n",
-        "# # Evaluate unit-charge density on atomic grid points\n",
-        "# func_vals = charge_distribution(atgrid.points)\n",
+        "# Evaluate unit-charge density on atomic grid points\n",
+        "func_vals = charge_distribution(atgrid.points)\n",
         "\n",
-        "# # Solve for the potential and evaluate it on atomic grid points\n",
-        "# potential = solve_poisson_bvp(\n",
-        "#         atgrid,\n",
-        "#         func_vals,\n",
-        "#         InverseRTransform(btf),\n",
-        "#         include_origin=True,\n",
-        "# )\n",
-        "# potential_values = potential(atgrid.points)\n",
+        "# Solve for the potential and evaluate it on atomic grid points\n",
+        "potential = solve_poisson_bvp(\n",
+        "        atgrid,\n",
+        "        func_vals,\n",
+        "        InverseRTransform(btf),\n",
+        "        include_origin=True,\n",
+        "        remove_large_pts=7.0,\n",
+        ")\n",
+        "potential_values = potential(atgrid.points)\n",
         "\n",
-        "# # Calculate the error between actual and solved potential\n",
-        "# err = np.abs(actual_potential(atgrid.points) - potential_values)\n",
-        "# print(\"Mean error in potential: \")\n",
-        "# print(f\"Max: {np.max(err)}, Mean: {np.mean(err)}, Std: {np.std(err)}\")\n"
+        "# Calculate the error between actual and solved potential\n",
+        "err = np.abs(actual_potential(atgrid.points) - potential_values)\n",
+        "print(\"Mean error in potential: \")\n",
+        "print(f\"Max: {np.max(err)}, Mean: {np.mean(err)}, Std: {np.std(err)}\")\n",
+        "# outputs Max: 1.932e-04, Mean: 5.998e-05, Std: 2.809e-05"
       ]
     },
     {
