Refactor docs website (#218)
* Move jupyter notebooks to examples folder in main

* Update year in conf

* Add nbsphinx-link to conf.py to link notebooks

- Needed to link website to notebooks outside of the doc folder

* Construct nblink for every externel jup notebook

* Add toc link to jupyter notebook via nbsphinx-link

* Add nbsphinx-link to requirements.txt

* Fix weird typo introduced in onedgrid examples

* Rename table of contents title

* Remove unused Becke reference

- Removes warning message in sphinx
- Updated to current api for .from_* methods

* Update documentation to remove some sphinx errors

* Add talbe link to oned juypter notebooks

* Update hyperlinks and title in atom_grid_construct

* Change get_rgrid_size to private

- So it doesn't show up in the documentation

* Fix wrong solution to Poisson example

- The error is incredibly small after fix

* Fix spacing in equation so it fits into page

- The equations go out of page in the webstie

* Fix so that bullet points show up

- Docutils need to be version 0.16
- Extensions need to have the theme
- stackoverflow: 67542699/readthedocs-sphinx-not-rendering-bullet-list-from-rst-file

* Fix table to show angular grids link correctly

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* Add instructions on how to build the website

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* Fix ruff linters on cubic and test_cubic

* Update citations

* Update atom grid notebook to match new api

* Add jupyter notebook

* Update jupyter github action workflow

* Remove .png from gitignore for jup notebooks

- Jupyter notebooks create .png files and so we need them for
  the website

* Try website github actions push

* Try again

* Try again but with artifacts removed

* Remove pip install with editable mode on

* Try 

--- a/examples/Interpolation_and_Poisson.ipynb
+++ b/examples/Interpolation_and_Poisson.ipynb
@@ -37,8 +37,8 @@
       "metadata": {
         "collapsed": true,
         "ExecuteTime": {
-          "end_time": "2023-05-19T10:26:56.405456106Z",
-          "start_time": "2023-05-19T10:26:56.109868583Z"
+          "end_time": "2024-01-08T20:58:10.192004233Z",
+          "start_time": "2024-01-08T20:58:10.094718751Z"
         }
       },
       "outputs": [],
@@ -54,7 +54,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 2,
       "outputs": [],
       "source": [
         "# Construct Atomic Grid\n",
@@ -71,8 +71,8 @@
       "metadata": {
         "collapsed": false,
         "ExecuteTime": {
-          "end_time": "2023-05-19T10:27:44.217077270Z",
-          "start_time": "2023-05-19T10:27:44.161486850Z"
+          "end_time": "2024-01-08T20:58:10.461254804Z",
+          "start_time": "2024-01-08T20:58:10.191879006Z"
         }
       }
     },
@@ -85,11 +85,11 @@
           "output_type": "stream",
           "text": [
             "Error difference between interpolation and true:\n",
-            "[2.03885450e-11 5.64345203e-11 1.09432265e-10 6.12496338e-11\n",
-            " 9.15886811e-12 5.53942031e-11 1.82077388e-10 7.62214354e-11\n",
-            " 1.08020218e-10 1.26516332e-11 6.38427089e-11 1.36835335e-12\n",
-            " 2.29083766e-12 1.07915340e-10 1.61463135e-11 8.81852612e-11\n",
-            " 4.39340925e-12 6.39232084e-10 7.09602863e-12 7.00513605e-12]\n"
+            "[1.89178096e-11 5.27372802e-11 5.82772147e-11 4.10898563e-15\n",
+            " 1.64881470e-11 2.55238009e-11 1.29296147e-12 2.59097473e-12\n",
+            " 2.75023420e-10 5.08640456e-11 8.28065238e-12 7.54837099e-10\n",
+            " 2.51240298e-11 6.69289698e-12 2.82764424e-11 2.35286288e-11\n",
+            " 4.27065323e-11 3.41960277e-11 5.42822891e-11 5.25577287e-11]\n"
           ]
         }
       ],
@@ -124,8 +124,8 @@
       "metadata": {
         "collapsed": false,
         "ExecuteTime": {
-          "end_time": "2023-05-19T10:27:07.105912750Z",
-          "start_time": "2023-05-19T10:27:06.132056758Z"
+          "end_time": "2024-01-08T20:58:10.840072685Z",
+          "start_time": "2024-01-08T20:58:10.463969456Z"
         }
       }
     },
@@ -143,13 +143,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 4,
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "0.10495702872626828 0.030589794409081324 0.02550959949900786\n"
+            "The maximum error: 1.4653770128456663e-06\n",
+            "The mean error: 1.1070838082589734e-06\n",
+            "The standard dev: 4.6000482348200205e-07\n"
           ]
         }
       ],
@@ -160,7 +162,7 @@
         "\n",
         "\n",
         "def actual_potential(x, alpha=0.25):\n",
-        "    r_PC = np.linalg.norm(x, axis=1)\n",
+        "    r_PC = np.linalg.norm(x - center, axis=1)\n",
         "    desired = erf(np.sqrt(alpha) * r_PC) / r_PC\n",
         "    desired[r_PC == 0.0] = 0.0\n",
         "    return desired\n",
@@ -180,13 +182,15 @@
         "\n",
         "\n",
         "err = np.abs(actual_potential(atgrid.points) - potential_values)\n",
-        "print(np.max(err), np.mean(err), np.std(err))\n"
+        "print(f\"The maximum error: {np.max(err)}\")\n",
+        "print(f\"The mean error: {np.mean(err)}\")\n",
+        "print(f\"The standard dev: {np.std(err)}\")\n"
       ],
       "metadata": {
         "collapsed": false,
         "ExecuteTime": {
-          "end_time": "2023-05-19T10:28:35.810454250Z",
-          "start_time": "2023-05-19T10:27:57.265664738Z"
+          "end_time": "2024-01-08T20:58:17.855028023Z",
+          "start_time": "2024-01-08T20:58:10.842833895Z"
         }
       }
     }
