--- a/examples/One_dimensional_grids.ipynb
+++ b/examples/One_dimensional_grids.ipynb
@@ -10,7 +10,7 @@
         "\n",
         "### Example: Visualize One-Dimensional Grid Points\n",
         "\n",
-        "Here, we showcase some of the quadrature rules available each with a unique set of points. [Click here for a full list of one-dimensional grid classes.](https://grid.qcdevs.org/pyapi/grid.onedgrid.html)\n"
+        "Here, we showcase some of the quadrature rules available each with a unique set of points. Click [here](https://grid.qcdevs.org/pyapi/grid.onedgrid.html) for a full list of one-dimensional grid classes and [here](https://grid.qcdevs.org/onedgrids.html#one-dimensional-grids) for a condensed table containing most of the popular grids."
       ]
     },
     {
@@ -84,7 +84,7 @@
         "\n",
         "The one-dimensional grids can accurately integrate one-variable functions over an interval (defined by their domain), even with a small number of points. Here, we numerically compute the integral below and compute the relative percent error. The analytical value of this integral is $\\pi/2$.\n",
         "\n",
-        "$$ \\int*{-1}^1 f(x) dx \\approx \\sum*{i=0}^{N-1} w_i f(x_i) $$\n"
+        "$$ \\int_{-1}^1 \\sqrt{1 - x^2} dx \\approx \\sum_{i=0}^{N-1} w_i \\sqrt{1 - x_i^2} $$\n"
       ]
     },
     {
@@ -206,7 +206,7 @@
       "source": [
         "## Radial Grid: Transformation of 1D-Integration Intervals\n",
         "\n",
-        "Generally, areas where the integrand changes more rapidly demand a denser concentration of points. So, the $[-1, 1]$ interval is not suitable for most applications encountered in quantum chemistry, where the integrals are usually performed on $[0,\\infty)$ domain. [Grid](https://github.com/theochem/grid) supports several transformations of the one-dimensional grids to other intervals. Some of these transformations have a parameter that can be used to control the density of points across different ranges of the new interval. [Click here for a full list of radial transformations.](https://grid.qcdevs.org/pyapi/grid.rtransform.html)\n",
+        "Generally, areas where the integrand changes more rapidly demand a denser concentration of points. So, the $[-1, 1]$ interval is not suitable for most applications encountered in quantum chemistry, where the integrals are usually performed on $[0,\\infty)$ domain. [Grid](https://github.com/theochem/grid) supports several transformations of the one-dimensional grids to other intervals. Some of these transformations have a parameter that can be used to control the density of points across different ranges of the new interval. Click [here](https://grid.qcdevs.org/pyapi/grid.rtransform.html) for a full list of radial transformations and [here](https://grid.qcdevs.org/radial_transf.html) for a condensed table with explicit formulas.\n",
         "\n",
         "### Visualize Radial Grid Points\n",
         "\n",
